sculpt mode show brush. #39034

Closed
opened 2014-03-08 03:07:12 +01:00 by ratty redemption · 15 comments
- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 571f184 win64 official.
was working in: ?

- Short description of error ---

sculpt mode show brush resets to always be on, when exiting mesh editmode.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

[apparently happens with all blend files including new startup.blend's and factory defaults]

see short description for reproduction steps.

i would like to keep the sculpt brush hidden and just use the mouse pointer, but it doesn't seem possible at the moment, unless i'm missing some other user option?

- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 571f184 win64 official. was working in: ? - Short description of error --- sculpt mode **show brush** resets to always be on, when exiting mesh **edit**mode. - Steps for others to reproduce the error (preferably based on attached .blend file) --- [apparently happens with all blend files including new startup.blend's and factory defaults] *see short description for reproduction steps.* i would like to keep the sculpt brush hidden and just use the mouse pointer, but it doesn't seem possible at the moment, unless i'm missing some other user option?

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rattyredemption

Added subscriber: @rattyredemption

Added subscriber: @joel.godin

Added subscriber: @joel.godin

Yes, I see it happens as far back as 2.65.
'Show Brush' should really hold user selection between modes.

Yes, I see it happens as far back as 2.65. 'Show Brush' should really hold user selection between modes.
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-03-08 14:58:14 +01:00

Added subscribers: @Psy-Fi, @mont29

Added subscribers: @Psy-Fi, @mont29

This oneliner fixes the issue: P20

Not sure why it was there, though… assigning to @Psy-Fi! :)

This oneliner fixes the issue: [P20](https://archive.blender.org/developer/P20.txt) Not sure why it was there, though… assigning to @Psy-Fi! :)

thanks guys.

i also have a question (and possibly another bug) regarding the circle shown when the brush is visible.

on my dell laptop with it's intel hd graphics chip, the circle doesn't move after i've started holding down the stroke, so it only updates it's position when i release the left mouse/touchpad button. then it snaps to where the mouse pointer is.

is that a bug or by design?

thanks guys. i also have a question (and possibly another bug) regarding the circle shown when the brush is visible. on my dell laptop with it's intel hd graphics chip, the circle doesn't move after i've started holding down the stroke, so it only updates it's position when i release the left mouse/touchpad button. then it snaps to where the mouse pointer is. is that a bug or by design?

@rattyredemption this awfully sounds like the CheapIntelGraphicBug™ (i.e. OpenGL issues with intel graphic drivers/cards), we have regular reports on this topic but can’t do much about it…

@rattyredemption this awfully sounds like the CheapIntelGraphicBug™ (i.e. OpenGL issues with intel graphic drivers/cards), we have regular reports on this topic but can’t do much about it…

@mont29 understood, and i had wondered if it was due to my gfx chip, i'm using the latest official drivers, so i didn't think that was the cause.

personally i can live with this, especially as i really only require the brush to be visible while i'm resizing it, and that does thankfully update in real time, from what i can see.

and while not a bug, is it possible to have a shortcut key for toggling the brush to be visible, like we have for the resizing shortcuts?

@mont29 understood, and i had wondered if it was due to my gfx chip, i'm using the latest official drivers, so i didn't think that was the cause. personally i can live with this, especially as i really only require the brush to be visible while i'm resizing it, and that does thankfully update in real time, from what i can see. and while not a bug, is it possible to have a shortcut key for toggling the brush to be visible, like we have for the resizing shortcuts?

Yes it is, add a wm.context_toggle operator shortcut with tool_settings.sculpt.show_brush as context screen (e.g. in Scuplt shortcuts…).

Yes it is, add a wm.context_toggle operator shortcut with `tool_settings.sculpt.show_brush` as context screen (e.g. in Scuplt shortcuts…).

cool, thanks. i have several custom shortcuts so that sounds straightforward enough.

cool, thanks. i have several custom shortcuts so that sounds straightforward enough.

This issue was referenced by blender/blender-addons-contrib@2de9da6ee9

This issue was referenced by blender/blender-addons-contrib@2de9da6ee9a8813704ad402c7bc4ba77b35a9267

This issue was referenced by 2de9da6ee9

This issue was referenced by 2de9da6ee9a8813704ad402c7bc4ba77b35a9267

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2de9da6ee9.

Closed by commit 2de9da6ee9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39034
No description provided.